--- a/src/styles/gallery.css
+++ b/src/styles/gallery.css
@@ -15,7 +15,7 @@
 
   box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
   object-fit: cover;
-  margin: 3px;
+  margin: 1px;
   width: 360px;
   height: 400px;
 
@@ -23,16 +23,16 @@
 
 .titleImage {
   display: flex;
-  box-shadow: 0px -20px 20px 15px rgb(0, 0, 0);
-  height: 13%;
-  width: 95%;
-  margin-left: 5px;
+  box-shadow: 0px -20px 20px 10px rgb(0, 0, 0);
+  height: 20%;
+  width: 99%;
   background-color: rgb(0, 0, 0);
-  opacity: 0.4;
-  margin-top: -15%;
+  opacity: 0.6;
+  margin-top: -22.0%;
   position: absolute;
   
 }
+
 
 .articleImg {
 
@@ -46,5 +46,38 @@
   font-size: 20px;
   color: whitesmoke;
   font-weight: bold;
+
+}
+
+.card-image:first-child{
+  margin-left: 0;
+  padding-left: 0;
+}
+
+
+.card-image {
+
+  margin: 3px;
+  padding: 4px;
+
+}
+
+.card-image:hover{
+  cursor: pointer;
+  border: 1px solid #fff;
+  margin: 7px;
+}
+
+.TEXT {
+
+  margin: 0 15px;
+
+
+}
+
+.ICON {
+
+  display: flex;
+  margin: auto;
 
 }
